Fix pricing plan border color

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,24 +22,175 @@ body{
   font-family: "Arial",sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  background-color:#fff;
-color:#222;
+  background-color:#f7f7fe;
+color:#6e728e;
 }
 
 img{
   max-width: 100%;
   height: auto;
 }
+
+
+.visuallyhidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
 .container{
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1100px;
+  padding-left: 25px;
+  padding-right: 25px;
   margin-left: auto;
   margin-right: auto;
 }
+/* Button */
+
+.button {
+  display: inline-block;
+  padding: 14px;
+  border:1px solid transparent;
+  margin: 0;
+  border-radius: 6px;
+  background-color:transparent;
+  font-size: 13px;
+  line-height: normal;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: background-color 0.4s ease,
+color 0.4s ease;
+}
+.button-block {
+  display: block;
+  width: 100%;
+}
+.button-primary {
+  background-color:#696edd;
+  background-image:linear-gradient(135deg,#a2a7f0 0%, #696edd 100%);
+  color:#fff;
+}
+
+.button-primary:hover{
+  border-color: #6d72de;
+  background-color:#fff;
+  background-image:none;
+  color:#6d72de;
+}
+
+
+.button-white {
+  background-color:#fff;
+  color:#6d72de;
+}
+
+.button-white:hover{
+  border-color:#fff;
+  background-color:transparent;
+  color:#6d72de;
+}
+
 
 /* MAinContent */
 .main-content{
  flex-grow: 1;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.page-title {
+  margin-top: 0;
+  margin-bottom: 40px;
+  font-size: 32px;
+}
+.pricing {
+  width: 100%;
+}
+
+.pricing-inner {
+  display:flex;
+  align-items:center;
+}
+.pricing-plan {
+  flex-grow: 1;
+  max-width: 350px;
+  padding: 32px;
+  background-color:#fff;
+  text-align: center;
+
+  --rang: rang;
+  border:1px solid var(--rang);
+}
+
+.pricing-plan:first-child{
+  border-top-left-radius:10px;
+  border-bottom-left-radius:10px;
+}
+.pricing-plan:last-child{
+  border-top-right-radius: 10px;
+  border-bottom-right-radius:10px ;
+}
+
+.pricing-plan-best {
+  padding-top: 55px;
+  padding-bottom: 55px;
+  border-radius:10px;
+  background-color: #696edd;
+  background-image: linear-gradient(135.06deg,#a2a7f0 -0.05%,#696edd 100.05%);
+  color:#fff;
+}
+
+
+.pricing-plan-title {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 28px;
+}
+.pricing-plan-price {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  margin-bottom: 32px;
+  font-size: 72px;
+  line-height: 72px;
+}
+.pricing-plan-currency {
+  margin-right: 8px;
+  font-size: 40px;
+  line-height: 40px;
+}
+.pricing-plan-features {
+  padding: 0;
+  border-top:1px solid rgb(110,114,142,0.25);
+  margin: 0;
+  margin-bottom: 32px;
+  list-style: none;
+}
+
+.pricing-plan-best .pricing-plan-features{
+  border-color:rgba(255,255,255,0.25);
+}
+.pricing-plan-feature {
+  padding: 12px;
+  border-top:1px solid rgb(110,114,142,0.25);
+
+}
+
+.pricing-plan-best .pricing-plan-feature{
+  border-color:rgba(255,255,255,0.25);
 }
