--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ img{
 }
 
 
-.visuallyhidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -117,6 +117,70 @@ color 0.4s ease;
   margin-bottom: 40px;
   font-size: 32px;
 }
+
+
+.pricing-switch{
+  margin-bottom: 64px;
+}
+
+.switch{
+display: flex;
+justify-content: center;
+align-items:center;
+}
+
+.switch-label{
+  font-size: 15px;
+  line-height: 28px;
+  color:rgba(110, 114, 142, 0.5);
+  cursor: pointer;
+}
+
+.switch-label:hover{
+  color:#6e728e;
+
+}
+
+.switch-control{
+  position: relative;
+width: 56px;
+height: 32px;
+padding: 4px;
+margin-left: 24px;
+margin-right: 24px;
+border-radius:16px;
+background-color:#696edd;
+background-image:linear-gradient(135deg,#a2a7f0 0% #696edd 100%);
+}
+
+.switch-circle{
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color:#fff;
+  transition: margin 0.4s ease;
+}
+
+.switch-control-annual,
+.switch-control-monthly{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  cursor:pointer;
+}
+
+.switch-input-annual:checked ~ .switch-control .switch-control-monthly,
+.switch-input-monthly:checked ~ .switch-control .switch-control-annual{
+z-index: 5;
+}
+
+.switch-input-monthly:checked ~ .switch-control .switch-circle {
+  margin-left: 24px;
+}
+
+
 .pricing {
   width: 100%;
 }
